[package]
name = "gcp-heuristics"
version = "0.1.0"
authors = [
  "Igor Lacerda <igorlfs@ufmg.br>",
  "Vinicius Gomes <vinisilvag@ufmg.br>",
]
edition = "2021"
description = "A CLI tool to execute heuristics for the Graph Coloring Problem (GCP)."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
rand = "0.8.5"
rayon = "1.8.0"
